# FlagScale

./: .gitignore  .pre-commit-config.yaml  README.md  README_cn.md  pyproject.toml  run.py  setup.py
.github/configs/: ascend.yml  cuda.yml  metax.yml  template.yml
.github/workflows/: all_tests_ascend.yml  all_tests_common.yml  all_tests_metax.yml  functional_tests_benchmark.yml  functional_tests_cli.yml  functional_tests_hetero_train.yml  functional_tests_inference.yml  functional_tests_megatron_fl_trigger.yml  functional_tests_rl.yml  functional_tests_serve.yml  functional_tests_train.yml  unit_tests_common.yml
docker/: build.sh
docker/cuda/: Dockerfile.all  Dockerfile.inference  Dockerfile.train
docs/: CHANGELOG.md  ascend.md  getting-started.md  robo.md
examples/emu3.5/conf/: README.md
examples/fl_audio/conf/: train.yaml
examples/gr00t_n1_5/: README.md
examples/gr00t_n1_5/conf/: serve.yaml  train.yaml
examples/pi0/: README.md
examples/pi0_5/: README.md
examples/pi0_5/conf/: serve.yaml  train.yaml
examples/qwen2_5_vl/: README.md
examples/qwen3/: README.md
examples/qwen3/conf/: rl.yaml  train_engram.yaml
examples/qwen35_vl/conf/: train.yaml
examples/qwen3_vl/: README.md
examples/qwen_gr00t/: README.md
examples/qwen_gr00t/conf/: inference.yaml  serve.yaml  train.yaml
examples/robobrain2/: README.md
examples/robobrain2_5/: README.md
examples/robobrain_x0/: README.md
examples/robobrain_x0_5/: README.md
flagscale/: cli.py  run.py
flagscale/eval/: robo.py
flagscale/inference/: inference_llm.py  inference_pi.py  inference_qwen_gr00t.py
flagscale/models/pi0/: configuration_pi0.py  modeling_pi0.py
flagscale/models/pi05/: configuration_pi05.py  modeling_pi05.py  pi_gemma.py
flagscale/models/utils/: constants.py
flagscale/models/vla/: __init__.py  base_policy.py  pretrained_config.py  protocols.py  qwen_gr00t.py  qwen_gr00t_task_encoder.py  registry.py  utils.py
flagscale/platform/: platform_cuda.py  platform_manager.py  platform_musa.py
flagscale/runner/: runner_inference.py  runner_serve.py  runner_train.py  runner_utils.py  utils.py
flagscale/serve/: README.md  msgpack_numpy.py  run_serve_gr00t_n1_5.py  run_serve_qwen_gr00t.py  websocket_policy_server.py
flagscale/train/: train_config.py  train_gr00t_n1_5.py  train_pi.py  train_qwen_gr00t.py
requirements/ascend/: base.txt  serve.txt  train.txt
requirements/cuda/: all.txt  base.txt  inference.txt  serve.txt  train.txt
requirements/musa/: base.txt  train.txt
tests/unit_tests/: test_cli.py  test_setup.py
tools/checkpoint/: convert.py  loader_mcore.py  run.sh  saver_transformers.py
(+191 files in other folders)
